[tool.poetry]
name = "test-1"
version = "0.1.0"
description = ""
authors = ["asafeeson <g.kochergin@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
litestar = {version = "^2", extras = ["standard"]}
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
